# kontiki-tui

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  docker-compose.stack.yaml  pyproject.toml
.github/workflows/: ci.yml
examples/: common.docker.yaml  kontiki_registry.yaml  rpc_example.py  rpc_service.py  rpc_service.yaml  simple_event_service.py  simple_event_service.yaml  simple_example.py
kontiki_tui/: app.css  app.py  config.py
kontiki_tui/backend/: log.py  services.py
kontiki_tui/components/: events.py  exceptions.py  log.py  prompt.py  services.py  settings.py  tabs.py
tests/unit/kontiki_tui/: test_config.py
tests/unit/kontiki_tui/backend/: test_log.py  test_services.py
